src/test/deca/codegen/valid/created/while.deca
{
    while(true) {
        println(1);
    }
}