src/test/deca/codegen/invalid/created/WhileTrue.deca
// Description:
// while true
// Resultats:
//

{
    println(-2147483648);
}